TG-133 FIX layout shifting, dates, tooltip

--- a/src/components/css/History.css
+++ b/src/components/css/History.css
@@ -129,8 +129,8 @@
 
 }
 
-.conditions-carousel-table {
-    height: 300px;
+.conditions-carousel-history {
+    height: 400px;
     width: 80%;
     display: flex;
     align-items: center;
@@ -141,4 +141,11 @@
 .swiper-button-next,
 .swiper-button-prev {
     scale: 60%;
+}
+
+.custom-tooltip {
+    background: #bbbbbb;
+    padding: 5px;
+    opacity: 0.5;
+
 }
